he afegit el favicon de la conchi i un link per al manifest

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Asociación por la Democracia Formal</title>
   </head>
   <body>
-    <link rel="icon" href="images/logo1.jpeg">
+    <link rel="icon" href="images/favicon_adf.png">
     <img src="images/logo1.jpeg" alt="Logo" width="100" ></img>
     <h1>Asociación para la Democracia Formal</h1>
     <p>Bienvenidos a la página web de la Asociación por la Democracia Formal (ADF).
         
         Asociación creada en asamblea fundacional el 2 de Mayo del 2024 por los asociados fundacionales: -Conchi, Javier, Luis, Bárbara, Jordi, Vero, Romà, Isra, Sergio, Axel y Sergio.</p>
-    <a href="estatutos.pdf">Estatutos</a>
+    <a href="estatutos.pdf">Estatutos</a> -
+    <a href="manifiesto.pdf">Manifiesto</a>
   </body>
 </html>
